Make project runnable: add config sample, Config loader, read config in DBConnection, relative classpath, update gitignore, README quickstart